Put icons on the left

--- a/templates/finances/awards.hbs
+++ b/templates/finances/awards.hbs
@@ -35,9 +35,7 @@
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2016-01-01</td>
             <td>2016-06-31</td>
-            <td><a href="#" class="btn btn-primary btn-success">
-                Apply Now
-                <i class="fa fa-check"></i></a></td>
+            <td><a href="#" class="btn btn-primary btn-success"><i class="fa fa-check"></i> Apply Now</a></td></a></td>
 
         </tr>
         <tr>
@@ -45,40 +43,35 @@
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2016-02-01</td>
             <td>2016-04-31</td>
-            <td><a href="#" class="btn btn-primary btn-success">Apply Now
-                <i class="fa fa-check"></i></a></td></a></td>
+            <td><a href="#" class="btn btn-primary btn-success"><i class="fa fa-check"></i> Apply Now</a></td></a></td>
         </tr>
         <tr>
             <td>D.Trump Award for Excellence in Wall-Building</td>
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2016-01-01</td>
             <td>2017-01-01</td>
-            <td><a href="#" class="btn btn-primary btn-success">Apply Now
-                <i class="fa fa-check"></i></a></td></a></td>
+            <td><a href="#" class="btn btn-primary btn-success"><i class="fa fa-check"></i> Apply Now</a></td></a></td>
         </tr>
         <tr>
             <td>R.A. Stimpleson Memorial Award</td>
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2014-11-21</td>
             <td>2018-11-20</td>
-            <td><a href="#" class="btn btn-primary btn-success">Apply Now
-                <i class="fa fa-check"></i></a></td></a></td>
+            <td><a href="#" class="btn btn-primary btn-success"><i class="fa fa-check"></i> Apply Now</a></td></a></td>
         </tr>
         <tr>
             <td>Govt. Of Canada - Maple Leaf Prize</td>
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2016-05-01</td>
             <td>2017-04-30</td>
-            <td><a href="#" class="btn btn-warning">Watch
-                <i class="fa fa-clock-o"></i></a></td></a></td>
+            <td><a href="#" class="btn btn-warning"><i class="fa fa-clock-o"></i> Watch</a></td></a></td>
         </tr>
         <tr>
             <td>UVSS Sign-Making Excellence Scholarship</td>
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2017-01-01</td>
             <td>2017-04-30</td>
-            <td><a href="#" class="btn btn-warning">Watch
-                <i class="fa fa-clock-o"></i></a></td></a></td>
+            <td><a href="#" class="btn btn-warning"><i class="fa fa-clock-o"></i> Watch</a></td></a></td>
         </tr>
 
         </tbody>
