--- a/templates/finances/taxes.hbs
+++ b/templates/finances/taxes.hbs
@@ -31,37 +31,37 @@
         <tr>
             <td>Spring 2015</td>
             <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
             </td>
         </tr>
         <tr>
             <td>Summer 2015</td>
             <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Spring 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
             </td>
         </tr>
         <tr>
-            <td>Summer 2016</td>
+            <td>Spring 2015</td>
             <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Spring 2015</td>
+            <td>
+                <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
             </td>
         </tr>
 
@@ -82,45 +82,45 @@
             <th class="col-md-1"></th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
-            <td>Spring 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Spring 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
+            <tbody>
+            <tr>
+                <td>Spring 2015</td>
+                <td>
+                    <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
+                </td>
+                <td>
+                    <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Summer 2015</td>
+                <td>
+                    <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
+                </td>
+                <td>
+                    <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Spring 2015</td>
+                <td>
+                    <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
+                </td>
+                <td>
+                    <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Spring 2015</td>
+                <td>
+                    <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
+                </td>
+                <td>
+                    <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
+                </td>
+            </tr>
 
-        </tbody>
+            </tbody>
     </table>
     </div>
 
@@ -138,45 +138,45 @@
             <th class="col-md-1"></th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
-            <td>Spring 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Spring 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
+            <tbody>
+            <tr>
+                <td>Spring 2015</td>
+                <td>
+                    <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
+                </td>
+                <td>
+                    <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Summer 2015</td>
+                <td>
+                    <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
+                </td>
+                <td>
+                    <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Spring 2015</td>
+                <td>
+                    <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
+                </td>
+                <td>
+                    <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Spring 2015</td>
+                <td>
+                    <a href="#" class="btn btn-info"><i class="fa fa-download"></i> Download</a>
+                </td>
+                <td>
+                    <button type="button" onclick="printFunction()" class="btn btn-primary"><i class="fa fa-print"></i> Print</button>
+                </td>
+            </tr>
 
-        </tbody>
+            </tbody>
     </table>
     </div>
 
