--- a/templates/finances/account.hbs
+++ b/templates/finances/account.hbs
@@ -24,7 +24,7 @@
                     <div class="btn-group">
 
                             <button type="button" onclick="printFunction()" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Print <i class="fa fa-print"></i> <span class="caret"></span>
+                                 <i class="fa fa-print"></i> Print <span class="caret"></span>
                             </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Summer 2013</a></li>
@@ -88,7 +88,7 @@
         <div class="col-xs-6">
             <h2 class="sub-header">Balance
                 <div class=pull-right>
-                    <a href="#" class="btn btn-info">Pay Now <i class="fa fa-credit-card"></i></a>
+                    <a href="#" class="btn btn-info"><i class="fa fa-credit-card"></i> Pay Now</a>
                 </div>
             </h2>
 
