--- a/templates/partials/imports.hbs
+++ b/templates/partials/imports.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/assets/css/MyPage.css">
+<link rel="stylesheet" href="/{{base_url}}assets/css/MyPage.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
