--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -1,5 +1,5 @@
 <ul class="nav nav-tabs">{{#each sections}}
     <li{{#if (equals this ../section)}} class="active"{{/if}}>
-        <a {{#unless (equals this ../section)}}href="/{{../user.path}}{{path}}{{lookup (lookup subsections start_page) "path"}}"{{/unless}}>{{title}}</a>
+        <a {{#unless (equals this ../section)}}href="/{{../base_url}}{{../user.path}}{{path}}{{lookup (lookup subsections start_page) "path"}}"{{/unless}}>{{title}}</a>
     </li>{{/each}}
 </ul>
