--- a/templates/partials/subnav.hbs
+++ b/templates/partials/subnav.hbs
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills">{{#each section.subsections}}
     <li {{#if (equals this ../page)}}class="active"{{/if}}>
-        <a {{#unless (equals this ../page)}}href="/{{../user.path}}{{../section.path}}{{path}}"{{/unless}}>
+        <a {{#unless (equals this ../page)}}href="/{{../base_url}}{{../user.path}}{{../section.path}}{{path}}"{{/unless}}>
             {{title}}
         </a>
     </li>{{/each}}
