--- a/templates/finances/taxes.hbs
+++ b/templates/finances/taxes.hbs
@@ -9,7 +9,7 @@
     <div class="row col-md-12">
         <h2>About Tax Forms</h2>
         <p>When filing your annual income tax, you may be required to submit one or more of the available forms.
-        Check with your accountant or tax professional for more information</p>
+            Check with your accountant or tax professional for more information</p>
         <h1></h1>
     </div>
 
@@ -17,185 +17,122 @@
 
     <h2>Available Documents</h2>
 
-    <div class="col-md-4">
-        <h4><b>Proof of Enrollment</b></h4>
-        <table class="table table-condensed table-striped col-md-3">
-        <thead>
-        <tr>
-            <th class="col-md-10"></th>
-            <th class="col-md-1"></th>
-            <th class="col-md-1"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Spring 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Spring 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-
-        </tbody>
-    </table>
-    </div>
 
 
 
     {{!T2202A Tax Form}}
-    <div class="col-md-4">
-        <h4><b>T2202A Form</b></h4>
-        <table class="table table-condensed table-striped col-md-3">
-        <thead>
-        <tr>
-            <th class="col-md-10"></th>
-            <th class="col-md-1"></th>
-            <th class="col-md-1"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Spring 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Spring 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
+    <div class="col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-heading"><h4>T2202A Form</h4></div>
+            <table class="table table-hover">
+                <tbody>
+                <tr>
+                    <td>Spring 2015</td>
+                    <td>
+                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                    </td>
+                    <td>
+                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                class="fa fa-print"></i></button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Summer 2015</td>
+                    <td>
+                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                    </td>
+                    <td>
+                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                class="fa fa-print"></i></button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Spring 2016</td>
+                    <td>
+                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                    </td>
+                    <td>
+                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                class="fa fa-print"></i></button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Summer 2016</td>
+                    <td>
+                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                    </td>
+                    <td>
+                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                class="fa fa-print"></i></button>
+                    </td>
+                </tr>
 
-        </tbody>
-    </table>
+                </tbody>
+            </table>
+        </div>
     </div>
 
 
 
 
     {{!T4 Tax Form}}
-    <div class="col-md-4">
-        <h4><b>T4 Form</b></h4>
-        <table class="table table-condensed table-striped col-md-3">
-        <thead>
-        <tr>
-            <th class="col-md-10"></th>
-            <th class="col-md-1"></th>
-            <th class="col-md-1"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Spring 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2015</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Spring 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>Summer 2016</td>
-            <td>
-                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-            </td>
-            <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
-            </td>
-        </tr>
+    <div class="col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-heading"><h4>T4a Form</h4></div>
+            <table class="table table-hover">
+                <tbody>
+                <tr>
+                    <td>Spring 2015</td>
+                    <td>
+                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                    </td>
+                    <td>
+                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                class="fa fa-print"></i></button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Summer 2015</td>
+                    <td>
+                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                    </td>
+                    <td>
+                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                class="fa fa-print"></i></button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Spring 2016</td>
+                    <td>
+                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                    </td>
+                    <td>
+                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                class="fa fa-print"></i></button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Summer 2016</td>
+                    <td>
+                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                    </td>
+                    <td>
+                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                class="fa fa-print"></i></button>
+                    </td>
+                </tr>
 
-        </tbody>
-    </table>
+                </tbody>
+            </table>
+        </div>
     </div>
 
 
-
-
 </div>
-
-
-    {{! Access the page context with `user` (see amy.json)
-    <p>{{user.content}}{{!</p>}}
-
-
-
-
-    {{!Print Script}}
-    <script>
-        function printFunction() {
-            window.print();
-        }
-    </script>
+{{!Print Script}}
+<script>
+    function printFunction() {
+        window.print();
+    }
+</script>
 {{/default}}
