Tweak verification some more

--- a/templates/finances/taxes.hbs
+++ b/templates/finances/taxes.hbs
@@ -6,127 +6,125 @@
         - Data comes in from JSON files, please put all data/strings in the JSON files
         - Keep the data organized, if you're adding financial data put it under "finances"
     }}
-    <div class="row col-md-12">
-        <h2>About Tax Forms</h2>
-        <p>When filing your annual income tax, you may be required to submit one or more of the available forms.
-            Check with your accountant or tax professional for more information</p>
-        <h1></h1>
-    </div>
-
-    {{! Access the page context with `page` (see globals.json)}}
-
-    <h2>Available Documents</h2>
-
-
-
-
-    {{!T2202A Tax Form}}
-    <div class="col-md-6">
-        <div class="panel panel-default">
-            <div class="panel-heading"><h4>T2202A Form</h4></div>
-            <table class="table table-hover">
-                <tbody>
-                <tr>
-                    <td>Spring 2015</td>
-                    <td>
-                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                    </td>
-                    <td>
-                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                class="fa fa-print"></i></button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Summer 2015</td>
-                    <td>
-                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                    </td>
-                    <td>
-                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                class="fa fa-print"></i></button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Spring 2016</td>
-                    <td>
-                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                    </td>
-                    <td>
-                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                class="fa fa-print"></i></button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Summer 2016</td>
-                    <td>
-                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                    </td>
-                    <td>
-                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                class="fa fa-print"></i></button>
-                    </td>
-                </tr>
-
-                </tbody>
-            </table>
+    <div class="row">
+        <div class="col-md-8">
+            <h2>About Tax Forms</h2>
+            <p>When filing your annual income tax, you may be required to submit one or more of the available forms.
+                Check with your accountant or tax professional for more information.</p>
         </div>
     </div>
 
-
-
-
-    {{!T4 Tax Form}}
-    <div class="col-md-6">
-        <div class="panel panel-default">
-            <div class="panel-heading"><h4>T4a Form</h4></div>
-            <table class="table table-hover">
-                <tbody>
-                <tr>
-                    <td>Spring 2015</td>
-                    <td>
-                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                    </td>
-                    <td>
-                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                class="fa fa-print"></i></button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Summer 2015</td>
-                    <td>
-                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                    </td>
-                    <td>
-                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                class="fa fa-print"></i></button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Spring 2016</td>
-                    <td>
-                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                    </td>
-                    <td>
-                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                class="fa fa-print"></i></button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Summer 2016</td>
-                    <td>
-                        <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                    </td>
-                    <td>
-                        <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                class="fa fa-print"></i></button>
-                    </td>
-                </tr>
-
-                </tbody>
-            </table>
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Available Documents</h2>
         </div>
     </div>
 
+    <div class="row">
+        {{!T2202A Tax Form}}
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading"><h4>T2202A Form</h4></div>
+                <table class="table table-hover">
+                    <tbody>
+                    <tr>
+                        <td>Spring 2015</td>
+                        <td>
+                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                        </td>
+                        <td>
+                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                    class="fa fa-print"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Summer 2015</td>
+                        <td>
+                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                        </td>
+                        <td>
+                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                    class="fa fa-print"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Spring 2016</td>
+                        <td>
+                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                        </td>
+                        <td>
+                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                    class="fa fa-print"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Summer 2016</td>
+                        <td>
+                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                        </td>
+                        <td>
+                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                    class="fa fa-print"></i></button>
+                        </td>
+                    </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        {{!T4 Tax Form}}
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading"><h4>T4a Form</h4></div>
+                <table class="table table-hover">
+                    <tbody>
+                    <tr>
+                        <td>Spring 2015</td>
+                        <td>
+                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                        </td>
+                        <td>
+                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                    class="fa fa-print"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Summer 2015</td>
+                        <td>
+                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                        </td>
+                        <td>
+                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                    class="fa fa-print"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Spring 2016</td>
+                        <td>
+                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                        </td>
+                        <td>
+                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                    class="fa fa-print"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Summer 2016</td>
+                        <td>
+                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                        </td>
+                        <td>
+                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
+                                    class="fa fa-print"></i></button>
+                        </td>
+                    </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
 </div>
 {{!Print Script}}
