Add Brand Badge

--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/{{base_url}}{{user.path}}{{sections.home.path}}">{{title}}</a>
+            <span class="navbar-brand"><img alt="{{title}}" class="img-responsive" src="/{{base_url}}/assets/img/brand.svg"/></span>
         </div>
 
         <div class="navbar-collapse collapse" id="nav-collapse" aria-expanded="false" style="height: 1px;">
