--- a/assets/sass/partials/_navbar.scss
+++ b/assets/sass/partials/_navbar.scss
@@ -162,7 +162,7 @@
 
 .navbar-brand {
   float: left;
-  padding: $navbar-padding-vertical $navbar-padding-horizontal;
+  padding: ($navbar-padding-vertical - 3);
   font-size: $font-size-large;
   line-height: $line-height-computed;
   height: $navbar-height;
@@ -174,6 +174,8 @@
 
   > img {
     display: block;
+    max-height: 100%;
+    max-width: 100%;
   }
 
   @media (min-width: $grid-float-breakpoint) {
