--- a/templates/finances/taxes.hbs
+++ b/templates/finances/taxes.hbs
@@ -20,110 +20,27 @@
         </div>
     </div>
 
-    <div class="row">
-        {{!T2202A Tax Form}}
+    <div class="row">{{#each user.finances.tax-slips}}
         <div class="col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading"><h4>T2202A Form</h4></div>
+                <div class="panel-heading">{{title}}</div>
                 <table class="table table-hover">
-                    <tbody>
+                    <tbody>{{#each years}}
                     <tr>
-                        <td>Spring 2015</td>
-                        <td>
-                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
+                        <td><h4>{{this}} Tax Year</h4></td>
+                        <td class="text-right">
+                            <button type="button" onclick="printFunction()" class="btn btn-default">
+                                <i class="fa fa-print"></i> Print
+                            </button>
+                            <button type="button" class="btn btn-primary">
+                                <i class="fa fa-download"></i> Download
+                            </button>
                         </td>
-                        <td>
-                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                    class="fa fa-print"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Summer 2015</td>
-                        <td>
-                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                        </td>
-                        <td>
-                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                    class="fa fa-print"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Spring 2016</td>
-                        <td>
-                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                        </td>
-                        <td>
-                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                    class="fa fa-print"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Summer 2016</td>
-                        <td>
-                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                        </td>
-                        <td>
-                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                    class="fa fa-print"></i></button>
-                        </td>
-                    </tr>
-
+                    </tr>{{/each}}
                     </tbody>
                 </table>
             </div>
-        </div>
-
-        {{!T4 Tax Form}}
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading"><h4>T4a Form</h4></div>
-                <table class="table table-hover">
-                    <tbody>
-                    <tr>
-                        <td>Spring 2015</td>
-                        <td>
-                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                        </td>
-                        <td>
-                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                    class="fa fa-print"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Summer 2015</td>
-                        <td>
-                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                        </td>
-                        <td>
-                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                    class="fa fa-print"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Spring 2016</td>
-                        <td>
-                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                        </td>
-                        <td>
-                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                    class="fa fa-print"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Summer 2016</td>
-                        <td>
-                            <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
-                        </td>
-                        <td>
-                            <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i
-                                    class="fa fa-print"></i></button>
-                        </td>
-                    </tr>
-
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        </div>{{/each}}
     </div>
 
 </div>
