--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -6,7 +6,7 @@
         <div class="panel panel-default tab-content">{{#each page.panels}}
             <div class="tab-pane{{#if (equals ../page.active_panel @key)}} active{{/if}}"
                  id="dashboard-{{@key}}">
-                {{>(lookup . "template")}}
+                {{>(lookup . "template") user=../user}}
             </div>{{/each}}
         </div>
         <ul class="nav nav-tabs">{{#each page.panels}}
