--- a/templates/partials/week_panel.hbs
+++ b/templates/partials/week_panel.hbs
@@ -5,19 +5,33 @@
 <!-- Table -->
 <table class="timetable" width="100%">
     <thead>
-        <tr>
-            <th width="10%"><i class="fa fa-clock-o"></i></th>{{#each days}}
-            <th width="18%">{{this}}</th>{{/each}}
-        </tr>
+    <tr>
+        <th width="10%"><i class="fa fa-clock-o"></i></th>{{#each days}}
+        <th width="18%">{{short}}</th>{{/each}}
+    </tr>
     </thead>
     <tbody>{{#each (list_times times.start times.end)}}
-    <tr class="half-hour">
-        <th class="time" rowspan="2">{{to12hour this}}</th>{{#each ../days}}
-        <td><div class="fill"></div></td>{{/each}}
-    </tr>
-    <tr>
-    {{#each ../days}}
-        <td><div class="fill"></div></td>{{/each}}
-    </tr>{{/each}}
+        <tr>
+            <th class="time" rowspan="2">{{to12hour this}}</th>{{#each ../days}}
+            <td>{{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (add ../this ".0"))}}
+                <div class="event" style="height: {{add (add (multiply length 32) (multiply length 2)) -5}}px">
+                    <h4 class="event-title">
+                        {{#with (lookup ../../../user.courses.semesters.[0].courses course)}}{{code}} {{number}}{{/with}}
+                    </h4>
+                </div>
+                {{else}}
+                <div class="fill"></div>{{/with}}
+            </td>{{/each}}
+        </tr>
+        <tr class="half-hour">{{#each ../days}}
+            <td>{{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (add ../this ".5"))}}
+                <div class="event" style="height: {{add (add (multiply length 32) (multiply length 2)) -5}}px">
+                    <h4 class="event-title">
+                        {{#with (lookup ../../../user.courses.semesters.[0].courses course)}}{{code}} {{number}}{{/with}}
+                    </h4>
+                </div>
+            {{else}}
+                <div class="fill"></div>{{/with}}{{/each}}
+        </tr>{{/each}}
     </tbody>
 </table>
