Change time to minutes

--- a/templates/partials/timetableEvent.hbs
+++ b/templates/partials/timetableEvent.hbs
@@ -3,7 +3,7 @@
     - It exists in the context of a schedule event
     - It is used in the weekPanel partial
 }}
-<div class="event" style="height: {{add (add (multiply length 32) (multiply length 2)) -5}}px">
+<div class="event" style="height: {{multiply length 0.5625}}px">
     <h4 class="event-title">
         {{#with course}}{{code}} {{number}}{{/with}}
         {{#if (equals type "lecture")}}
@@ -14,3 +14,34 @@
         {{/if}}
     </h4>
 </div>
+
+{{! How the height of events is calculated
+    -------------------------------------------------------
+
+    - the length of an event is in minutes
+    - the height of a cell is 16px with a border of 1px
+    - each event has a 1px top and bottom margin
+
+    Each hour is 32px (16px per half hour cell) so the naive height of an event
+    is,
+
+            h = (l/60) * (32px - 2px)
+              = l * 30/60
+              = l * 0.5 px
+
+   where l is in minutes, and we remove two pixels from the height to account
+   for the margin. To adjust for each cells 1px border we first need to
+   calculate how many cells we cross (how many hours we have basically), we'll
+   pretend there's 64 minutes in an hour to make math easier then multiply by
+   2px for the borders,
+
+            hours = l/64 * 2px
+                  = l * 1/32
+                  = l * 0.0625
+
+   so the total height will be,
+
+            h = l * (0.5 + 0.0625)
+              = l * (0.5625)
+
+}}
