--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -44,6 +44,20 @@ table.timetable {
             padding: 0;
             margin: 0;
           }
+          $course-colors:
+                  #1f77b4
+                  #ff7f0e
+                  #2ca02c
+                  #d62728
+                  #7e55a3
+                  #a6538a
+                  #bcbd22;
+          @for $i from 1 through length($course-colors)-1 {
+            &.event-course-#{$i} {
+              color:      darken(nth($course-colors, $i), 10%);
+              background: lighten(nth($course-colors, $i), 40%);
+            }
+          }
         }
       }
     }
