--- a/templates/partials/weekPanel.hbs
+++ b/templates/partials/weekPanel.hbs
@@ -8,26 +8,31 @@
     <thead>
     <tr>
         <th width="10%"><i class="fa fa-clock-o"></i></th>{{#each days}}
-        <th width="18%">{{short}}</th>{{/each}}
+        <th width="18%" class="{{#if (equals @key ../today)}}today{{else}} {{#unless (or (equals @key (offsetDay ../today 1)) (equals @key (offsetDay ../today 2)))}}hidden-xs{{/unless}}{{/if}}">
+            {{short}}
+        </th>{{/each}}
     </tr>
     </thead>
     <tbody>{{#each (listTimes times.start times.end)}}
         {{! Half Hour }}
         <tr class="half-hour">
             <th class="time" rowspan="2">{{to12hour this}}</th>{{#each ../days}}
-            {{log (toFixed (add ../this -0.5) 1)}}
-            <td>{{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (toFixed (add ../this -0.5) 1))}}
+            <td class="{{#if (equals @key ../../today)}}today{{else}} {{#unless (or (equals @key (offsetDay ../../today 1)) (equals @key (offsetDay ../../today 2)))}}hidden-xs{{/unless}}{{/if}}">
+                {{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (toFixed (add ../this -0.5) 1))}}
                 {{>timetableEvent course=(lookup ../../../user.courses.semesters.[0].courses course)}}
                 {{else}}
-                <div class="fill"></div>{{/with}}
+                <div class="fill"></div>
+                {{/with}}
             </td>{{/each}}
         </tr>
         {{! Hour }}
         <tr>{{#each ../days}}
-            <td>{{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (toFixed ../this 1))}}
+            <td class="{{#if (equals @key ../../today)}}today{{else}} {{#unless (or (equals @key (offsetDay ../../today 1)) (equals @key (offsetDay ../../today 2)))}}hidden-xs{{/unless}}{{/if}}">
+                {{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (toFixed ../this 1))}}
                 {{>timetableEvent course=(lookup ../../../user.courses.semesters.[0].courses course)}}
                 {{else}}
-                <div class="fill"></div>{{/with}}
+                <div class="fill"></div>
+                {{/with}}
             </td>{{/each}}
         </tr>{{/each}}
     </tbody>
